<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_runtime_monitor</name>
  <version>0.5.9</version>
  <description>rqt_runtime_monitor provides a GUI plugin viewing DiagnosticsArray messages.</description>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_runtime_monitor</url>
  <url type="repository">https://github.com/ros-visualization/rqt_runtime_monitor</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_runtime_monitor/issues</url>

  <author>Aaron Blasdel</author>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
